RESOLVED FIXED131828
[iOS] REGRESSION (r166975): WKPDFView is broken
https://bugs.webkit.org/show_bug.cgi?id=131828
Summary [iOS] REGRESSION (r166975): WKPDFView is broken
Tim Horton
Reported 2014-04-17 16:15:45 PDT
We're getting layer tree updates while the custom content view is installed, this is causing trouble. The assert should be an early return, because we never want to apply changes to the scroll view while it's being managed by the custom content view, and we'll get any changes again in the next commit after removing the custom content view (and painting the new page) anyway. <rdar://problem/16631282>
Attachments
patch (1.50 KB, patch)
2014-04-17 16:17 PDT, Tim Horton
simon.fraser: review+
Tim Horton
Comment 1 2014-04-17 16:17:14 PDT
Tim Horton
Comment 2 2014-04-17 16:30:20 PDT
Note You need to log in before you can comment on or make changes to this bug.