[iOS] REGRESSION (r166975): WKPDFView is broken https://bugs.webkit.org/show_bug.cgi?id=131828

Reviewed by Simon Fraser.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _didCommitLayerTree:WebKit::]):
Bail from updating the scroll view parameters from the layer tree update
while it's being managed by a custom content view.
We'll get any changes again in the next commit after removing the custom
content view (and painting the new page) anyway, so this should be OK.


Canonical link: https://commits.webkit.org/149891@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167465 268f45cc-cd09-0410-ab3c-d52691b4dbfc